# DP

./: .gitattributes  .gitignore  README.MD
0research/: Links.MD  README.MD  Research.MD  jabref.bib
0research/ResearchData/: InitialPitch.MD  Libraries.MD  Research.MD  jabref.bib
1source/: README.MD
1source/00DearImGui/: README.MD
1source/00DearImGui/00SampleProject/: CMakeLists.txt  Run.cpp  SampleProject.cpp  vcpkg.json
1source/00DearImGui/00SampleProject/App/: AppStart.cpp
1source/00DearImGui/01HelloCounter/: CMakeLists.txt  Run.cpp  vcpkg.json
1source/00DearImGui/01HelloCounter/App/: App.hpp  AppBoilerplate.cpp  AppStart.cpp  AppUpdate.cpp  AppUser.cpp
1source/00DearImGui/02HelloCounter_NoVcpkg/: CMakeLists.txt
1source/00DearImGui/02HelloCounter_NoVcpkg/App/: App.hpp  AppBoilerplate.cpp
1source/01DearImGui/: README.MD
1source/01DearImGui/00SampleProject/: CMakeLists.txt  Run.cpp  vcpkg.json
1source/01DearImGui/00SampleProject/App/: App.hpp  AppBoilerplate.cpp  AppStart.cpp  AppUpdate.cpp
1source/01DearImGui/01HelloCounter/: CMakeLists.txt
1source/01DearImGui/01HelloCounter/App/: App.hpp
1source/01DearImGui/01HelloCounter_FreeType/: CMakeLists.txt  vcpkg.json
1source/01DearImGui/01HelloCounter_FreeType/App/: App.hpp
1source/01DearImGui/02HelloCounter_NoVcpkg/: CMakeLists.txt
1source/01DearImGui/02HelloCounter_NoVcpkg/App/: App.hpp  AppBoilerplate.cpp  AppStart.cpp  AppUpdate.cpp
1source/01DearImGui/03ConceptA/: CMakeLists.txt  vcpkg.json
1source/01DearImGui/03ConceptA/App/: App.hpp  AppStart.cpp  AppUpdate.cpp
1source/01DearImGui/04HelloCounter_Offline/: CMakeLists.txt
1source/01DearImGui/04HelloCounter_Offline/App/: App.hpp  AppBoilerplate.cpp  AppStart.cpp  AppUpdate.cpp
1source/01DearImGui/05Playground/: CMakeLists.txt
1source/01DearImGui/05Playground/App/: App.hpp  AppBoilerplate.cpp  AppStart.cpp  AppUpdate.cpp
1source/01egui/: README.MD
1source/01egui/00SampleProject/: Cargo.toml  README.md
1source/01egui/00SampleProject/src/: main.rs
1source/01egui/01HelloCounter/: Cargo.toml
1source/01egui/01HelloCounter/src/: app.rs
1source/02ClayMan/: README.MD
1source/02ClayMan/00SampleProject/: CMakeLists.txt  SampleProject.cpp
1source/02ClayMan/00SampleProject/App/: App.cpp  App.hpp  clay_renderer_raylib.c  clayman.cpp  clayman.hpp
1source/02egui/: README.MD
1source/02egui/00SampleProject/: README.md  index.html
1source/02egui/00SampleProject/assets/: sw.js
1source/02egui/01HelloCounter/src/: main.rs
1source/02egui/02ConceptA/: Cargo.toml
1source/02egui/02ConceptA/src/: app.rs  lib.rs  main.rs  style.rs
1source/02egui/03Playground/: Cargo.toml
1source/02egui/03Playground/src/: app.rs  lib.rs  main.rs  panel_bottom.rs  panel_central.rs  panel_top.rs  (+1 more)
1source/03Nuklear/: README.MD
1source/03Nuklear/00SampleProject/: CMakeLists.txt  NuklearApp.c  SampleProject.c  vcpkg.json
1source/03Nuklear/01HelloCounter/: CMakeLists.txt  NuklearApp.c  vcpkg.json
1source/03Nuklear/02HelloCounter_NoVcpkg/: CMakeLists.txt  NuklearApp.c
1source/03Nuklear/03ConceptA/: CMakeLists.txt  NuklearApp.c
1source/04microui/: README.MD
1source/04microui/00SampleProject/: CMakeLists.txt  main.c  renderer.c
1source/04microui/01HelloCounter/: CMakeLists.txt  main.c  renderer.c
1source/04microui/02Playground/: CMakeLists.txt  main.c  renderer.c
1source/04microui/03ConceptA/: main.c  renderer.c
1source/05raygui/: README.MD
1source/05raygui/00SampleProject/: CMakeLists.txt  RayguiApp.c  SampleProject.c  vcpkg.json
1source/05raygui/01HelloCounter/: CMakeLists.txt  RayguiApp.c  RayguiProject.c
1source/05raygui/02ConceptA/: CMakeLists.txt  RayguiApp.c
1source/06Gio/: README.MD
1source/06Gio/00SampleProject/: go.mod  main.go
1source/06Gio/01HelloCounter/: go.mod  main.go
1source/06Gio/02ConceptA/: go.mod  main.go
1source/50Qt/: README.MD
1source/50Qt/00HelloCounter_QtCreator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
1source/50Qt/01HelloCounter_Independent/: CMakeLists.txt
1source/50Qt/02ConceptA/: CMakeLists.txt
1source/50Qt/02ConceptA/include/: Canvas.hpp  MainWindow.hpp
1source/50Qt/02ConceptA/src/: Canvas.cpp  MainWindow.cpp
1source/50Qt/03Playground/: CMakeLists.txt  README.MD  Run.cpp
1source/50Qt/03Playground/App/GUI/: Arrow.cpp  Arrow.hpp  DiagramItem.cpp  DiagramItem.hpp  DiagramScene.cpp  DiagramScene.hpp  DiagramTextItem.cpp  DiagramTextItem.hpp  MainWindow.cpp  MainWindow.hpp
1source/51Avalonia/: README.MD
1source/51Avalonia/00HelloCounter_CodeBehind/: AvaloniaApplication1.sln  Makefile  makew.ps1
1source/51Avalonia/01HelloCounter_MVVM/: AvaloniaApplication2.sln  Makefile  makew.ps1
1source/Benchmark/: .gitignore  main.py  readme.txt
1source/Benchmark/20260324/: main.py
1source/Benchmark/20260324_initial/: BenchStats_DearImGui_0_lin_off.csv  BenchStats_DearImGui_0_lin_on.csv  BenchStats_DearImGui_1_lin_off.csv  BenchStats_DearImGui_1_lin_on.csv  BenchStats_DearImGui_1_win_off.csv  BenchStats_Qt_0_win_on.csv  BenchStats_Qt_1_lin_on.csv  BenchStats_Qt_1_win_on.csv  BenchStats_Qt_2_win_on.csv
1source/Benchmark/20260327/: main_nodes.py  main_widgets.py
1source/Benchmark/20260328/: main.py  main_doc.py  main_nodes.py  main_ppt.py
2thesis/: DRAFT.MD  director's cut.MD  document.tex  zdroje.bib
2thesis/code/: code.tex  dear_combo.cpp  dear_slider.cpp  egui_panel_top.rs  hello_counter_imgui.cpp  hello_counter_rmgui.cpp  microui_autosize_delay.c  numericupdown.cpp  qt_panel_top.cpp  qt_qtimer.cpp  qt_signal.cpp  settings.cpp  toml_vs_json.txt
2thesis/img/diag/: svg2pdf.ps1
3slideshow/Diploma Seminar/: presentation.tex
3slideshow/Diploma Seminar A/: presentation.tex
3slideshow/Diploma Seminar A/code/: code.tex
3slideshow/Diploma Seminar B/: presentation.tex
3slideshow/Diploma Seminar B/code/: code.tex  qt1.txt  qt2.txt  rmgui.txt
3slideshow/Diploma Seminar/code/: imgui.txt  rmgui.txt
3slideshow/Final Defence/: presentation.tex
3slideshow/Final Defence/code/: builder.rs  code.tex  diagram.toml  imgui.txt  qt.cpp  rmgui.txt  settings.cpp
(+195 files in other folders)
